--- a/QuanLiChuoiCF/App.config
+++ b/QuanLiChuoiCF/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="QuanLiChuoiCF.Properties.Settings.QuanLiChuoiCFConnectionString"
+            connectionString="Data Source=PHANLUY;Initial Catalog=QuanLiChuoiCF;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
